--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<h1>Full Stack Website Weveloper</h1>
 
 			<p>Hi my name is Zxared! and Welcome to My Portfolio</p>
-			<img id="profile" src="./images/me.jpg" class="img-fluid"/>
+			<img id="profile" src="./images/bill.jpg" class="img-fluid"/>
 			<a href="mailto:jayzxared@gmail.com" target="_blank" class="btn btn-success" >Let's work together!</a>
 		</section>
 	</div>
